# weather_station

./: .gitignore  README.md  cron_collector  cron_indoor  cron_outdoor  cron_scgi  main.c
ardunio/: Makefile  main.c
build_scripts/: rules.mk  target.mk
indoor/bme688/: Cargo.toml
indoor/bme688/src/: bme688.rs  main.rs
outdoor/ardunio/: ardunio.ini  build.sh  download.sh  main.c  meson.build
outdoor/pi/: Cargo.toml  outdoor.toml
outdoor/pi/src/: clock.rs  main.rs  stats.rs
rust/: Cargo.toml  weather.toml
rust/bme688/: Cargo.toml
rust/bme688/src/: bme688.rs  lib.rs  main.rs
rust/clock/: Cargo.toml
rust/clock/src/: lib.rs
rust/collector/: Cargo.toml
rust/collector/src/: drop_privs.rs  main.rs  scgi.rs  sensor.rs
rust/config/: Cargo.toml
rust/config/src/: lib.rs
rust/indoor/: Cargo.toml
rust/indoor/src/: main.rs
rust/listener/: Cargo.toml
rust/listener/src/: lib.rs
rust/outdoor/: Cargo.toml
rust/outdoor/src/: clock.rs  main.rs  stats.rs  wind.rs
rust/scgi_app/: Cargo.toml
rust/scgi_app/src/: config.rs  drop_privs.rs  main.rs  scgi.rs  sensor.rs
rust/sht31/: Cargo.toml
rust/sht31/src/: lib.rs
rust/weather_err/: Cargo.toml
rust/weather_err/src/: lib.rs
website/: README.md  example_ca.conf  example_website.ext  lighttpd.conf  my_website.conf
website/fastcgi_app/: __main__.py
website/pages/: index.html
website/scgi_app/: pyproject.toml  setup.cfg
website/scgi_app/scgi_weather_app/: scgi_server.py
website/scgi_rust_app/: Cargo.toml
website/scgi_rust_app/src/: main.rs
