[workspace]
members = ["bme688", "indoor", "outdoor", "clock", "scgi_app", "listener"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Peter"]
description = "Weather Station rust compoments"

[workspace.dependencies]
toml = "0.8.13"
sqlite = "0.36.1"
chrono = "0.4.38"

[profile.dev]
codegen-units = 1
opt-level = "z"

