[package]
name = "outdoor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["fs", "io-util", "rt", "rt-multi-thread", "time", "net"] }
approx = "0.5.1"
clock = { path = "../clock" }
listener = { path = "../listener" }
sht31 = { path = "../sht31" }
weather_err = { path = "../weather_err" }
sqlite = { workspace = true }
chrono = { workspace = true }
config = { path = "../config" }
