[package]
name = "scgi_app"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
toml = { workspace = true }
sqlite = { workspace = true }
tokio = { version = "1.40.0", features = ["fs", "io-util", "rt", "rt-multi-thread", "time", "net"] }
clock = { path = "../clock" }
weather_err = { path = "../weather_err" }
config = { path = "../config" }
