[metadata]
name = scgi_weather_app
version = 1.0
description = Script to interface between lighttpd and db
url = https://github.com/peter1010/weather_station/
author = Peter1010
author_email = peter1010@localnet
classifiers =
	Programming Language :: Python :: 3
   	License :: OSI Approved :: GPL
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
